@@ -174,6 +174,12 @@
     <ClInclude Include="..\include\MeshLoader.h">
       <Filter>Header Files\gfx</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\VertexElement.h">
+      <Filter>Header Files\gfx</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\VertexDeclaration.h">
+      <Filter>Header Files\gfx</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\KGEmain\Device.cpp">
@@ -234,6 +240,9 @@
       <Filter>Source Files\io</Filter>
     </ClCompile>
     <ClCompile Include="..\KGEmain\Renderer.cpp">
+      <Filter>Source Files\gfx</Filter>
+    </ClCompile>
+    <ClCompile Include="..\kgemain\VertexDeclaration.cpp">
       <Filter>Source Files\gfx</Filter>
     </ClCompile>
   </ItemGroup>
