@@ -2,6 +2,8 @@
 
 * Renderer
 - (Add) HardwareBuffer interface for working with buffers on GPU
+- (Add) CustomVertexElement
+- (Add) VertexDec
 	* Renderer_d3d9
 	- (Add) VertexBufferDX9 class added for working with Vertex buffers.
 	- (Add) IndexBufferDX9 class added for working with index buffers.
